--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "glances>=4.3.3",
     "ipython>=9.4.0",
     "matplotlib>=3.10.3",
+    "pyyaml>=6.0.2",
     "streamlit>=1.47.1",
     "uvicorn>=0.35.0",
 ]
