--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "ipython>=9.4.0",
     "matplotlib>=3.10.3",
     "pyyaml>=6.0.2",
+    "ruff>=0.12.7",
     "streamlit>=1.47.1",
     "uvicorn>=0.35.0",
 ]
